# medicare-rebate-checker

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: docs.yml  test.yml
docs/: agent_workflow.md  api_reference.md  architecture.md  changelog.md  code-of-conduct.md  compliance.md  configuration.md  contributing.md  deployment.md  development.md  funding.yml  index.md  installation.md  monitoring.md  privacy.md  releases.md  roadmap.md  security.md  testing.md  troubleshooting.md
docs/internal/: IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md
k8s/: 00-namespace.yaml  01-configmap.yaml  02-secret.yaml  10-api-deployment.yaml  20-redis.yaml  30-pvc.yaml
scripts/: init_cache.py
src/agents/: __init__.py  calculator.py  mbs_fetcher.py  reporter.py  validator.py
src/app/: __init__.py  cli.py  main.py  streamlit_app.py
src/data/: mbs_items.json
tests/: __init__.py  test_agents.py  test_app.py
